tests/data/php/shouldfail/MemberVarScope.php
<?php
/**
 * @package testdata.shouldfail
 */
class MemberVarScope {
    var $noScope;
}